# mtg-decklist-price-rust

./: .editorconfig  Cargo.toml  Makefile  README.md
src/: main.rs
test/: sample_decklist.txt
