[package]
name = "mtg-decklist-price"
version = "0.1.0"
edition = "2024"

[dependencies]
governor = "0.10.0"
lazy_static = "1.5.0"
log = "0.4.27"
regex = "1.11.1"
scryfall = "0.22.0"
simple_logger = "5.0.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
